<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/home_item"
        android:orderInCategory="1"
        android:icon="@drawable/globe"
        app:showAsAction="always"
        android:title="@string/home"/>

    <item android:id="@+id/search_item"
        android:title="@string/search_database"
        android:icon="@drawable/search"
        android:orderInCategory="2"
        app:showAsAction="always"/>

    <item android:id="@+id/favourite_item"
        android:title="@string/favourites"
        android:icon="@drawable/favourite"
        android:orderInCategory="3"
        app:showAsAction="always"/>

    <item android:id="@+id/logout_item"
        android:icon="@drawable/logout"
        android:title="@string/logout"
        app:showAsAction="always"
        android:orderInCategory="4"/>

</menu>